--- a/index.html
+++ b/index.html
@@ -22,10 +22,9 @@
 		<div class="slides">
 			<section data-markdown="slides/main.md" data-separator="^\n\n\n" data-separator-vertical="^\n\n"
 				data-separator-notes="^Note:" data-charset="utf-8">
-				<!--
-        Note that Windows uses `\r\n` instead of `\n` as its linefeed character.
-        For a regex that supports all operating systems, use `\r?\n` instead of `\n`.
-    -->
+			</section>
+			<section data-markdown="slides/pascal.md" data-separator="^\n\n\n" data-separator-vertical="^\n\n"
+				data-separator-notes="^Note:" data-charset="utf-8">
 			</section>
 		</div>
 	</div>
