--- a/index.html
+++ b/index.html
@@ -20,10 +20,10 @@
 <body>
 	<div class="reveal">
 		<div class="slides">
-			<section data-markdown="slides/main.md" data-separator="^\n\n\n" data-separator-vertical="^\n\n"
+			<section data-markdown="slides/pascal.md" data-separator="^\n\n\n" data-separator-vertical="^\n\n"
 				data-separator-notes="^Note:" data-charset="utf-8">
 			</section>
-			<section data-markdown="slides/pascal.md" data-separator="^\n\n\n" data-separator-vertical="^\n\n"
+			<section data-markdown="slides/fredrik.md" data-separator="^\n\n\n" data-separator-vertical="^\n\n"
 				data-separator-notes="^Note:" data-charset="utf-8">
 			</section>
 		</div>
